<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Permission -->
    <string name="perm_desc">Access to the db provider of MIWOTREFF</string>

    <!-- Application -->
    <string name="app_name">Miwotreff</string>
    <string name="no_entries">No Entries here.\nRefresh to load data.</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh Data</string>
    <string name="menu_export">Backup</string>
    <string name="menu_import">Restore</string>
    <string name="db_open_error">Failed to open the database.</string>
    <string name="search_hint">Search Date, Topic, Person</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_delete_old">Delete old backup</string>
    <string name="share">Share</string>
    <string name="shareWith">Share with…</string>
    <string name="addToCall">Add to Calendar</string>
    <string name="cal_prefix">MiWoTreff:</string>
    <string name="cal_loc">Möhlstraße 20, 80935 Munich</string>
    <string name="delItem">Delete Item</string>
    <string name="error_delItem">Error: %ld wasn\'t deleted.</string>
    <string name="error_mkdir">Can\'t create directory \'%s\'!</string>
    <string name="info_mkdir">Backup in File %s</string>
    <string name="count_del">%s Files deleted</string>
    <string name="no_del">No files to delete</string>
    <string name="error_write_file">Error writing backup file!</string>
    <string name="error_read_file">Error reading backup file!</string>
    <string name="error_parse_file">Error parsing json file!</string>
    <string name="error_pl_noconnect">There is no internet connection to load.
    </string>
    <string name="error_pl_fetch">Error fetching data from website.</string>
    <string name="error_pl_nodata">There is no data on the website.</string>
    <string name="error_delete">Error deleting old files</string>
    <string name="load_success">%d added.</string>
    <string name="restore_success">Restore data (%s entries) successfully.
    </string>
    <string name="no_restore">No files to restore.</string>
    <string name="no_file_selected">No file selected to restore.</string>
    <!-- UndoBar -->
    <string name="undobar_entry_deleted">%s deleted.</string>
    <string name="undobar_undo">Undo</string>
    <!-- Done & Discard -->
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <!-- EditActivity -->
    <string name="error_sql">SQL-Error: Can\'t read Entry with ID \'%ld\'.
    </string>
    <!-- Contextual Action Mode -->
    <string name="title_count_selected">%s selected.</string>

    <string name="shareText_today">Today the topic on #Mittwochstreff is \"%1$s\".\nEverybody is welcome to join. It starts at 19:30.</string>
    <string name="shareText_future">On %2$s the topic on #Mittwochstreff is \"%1$s\".\nEverybody is welcome to join. It starts at 19:30.</string>
    <string name="shareText_past">On %2$s the topic on #Mittwochstreff was \"%1$s\".</string>
</resources>