<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_action_search"
            android:showAsAction="always"
            android:title="@string/menu_search"/>
    <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_action_refresh"
            android:showAsAction="always"
            android:title="@string/menu_refresh"/>
    <item
            android:id="@+id/menu_export"
            android:showAsAction="never"
            android:title="@string/menu_export"/>
    <item
            android:id="@+id/menu_import"
            android:showAsAction="never"
            android:title="@string/menu_import"/>
    <item
            android:id="@+id/menu_delete"
            android:showAsAction="never"
            android:title="@string/menu_delete_old"/>
</menu>